fixed chart overflow when stacked vertically

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -133,6 +133,7 @@ html, body {
     gap: 0.2rem;
     font-size: 1.2rem;
     width: 100%;
+    height: 100%;
 }
 
 .chart label {
@@ -143,7 +144,7 @@ html, body {
 
 .chart img {
     max-width: 100%;
-    max-height: 100%;
+    max-height: 75%;
     object-fit: contain;
 }
 
